{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 70,
  "lineage": "92ff3f7b-9205-d61c-3fad-8f346d784446",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "terra_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-072e7ee365385b829",
            "arn": "arn:aws:ec2:us-east-1:381492199513:elastic-ip/eipalloc-072e7ee365385b829",
            "associate_with_private_ip": "10.0.1.109",
            "association_id": "eipassoc-0eeb832399c7f2c15",
            "domain": "vpc",
            "id": "eipalloc-072e7ee365385b829",
            "instance": "i-0784e84b8e978c53c",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0553ae36e5b62066d",
            "private_dns": "ip-10-0-1-109.ec2.internal",
            "private_ip": "10.0.1.109",
            "public_dns": "ec2-34-202-52-113.compute-1.amazonaws.com",
            "public_ip": "34.202.52.113",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.terra_ec2",
            "aws_internet_gateway.terra_IGW",
            "aws_network_interface.terra_net_interface",
            "aws_security_group.terra_SG",
            "aws_subnet.terra_subnet",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terra_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b70fa74e45c3917",
            "arn": "arn:aws:ec2:us-east-1:381492199513:instance/i-0784e84b8e978c53c",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0784e84b8e978c53c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "demo-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0553ae36e5b62066d"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0553ae36e5b62066d",
            "private_dns": "ip-10-0-1-109.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.109",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04594bd86ab4e59c3",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bc93a3234b0d26e2",
            "tags": {
              "name": "web_server"
            },
            "tags_all": {
              "name": "web_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c1cd9183f4e16f02"
            ]
          },
          "dependencies": [
            "aws_network_interface.terra_net_interface",
            "aws_security_group.terra_SG",
            "aws_subnet.terra_subnet",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terra_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492199513:internet-gateway/igw-0cf0f859f2185146c",
            "id": "igw-0cf0f859f2185146c",
            "owner_id": "381492199513",
            "tags": {
              "name": "my_IGW"
            },
            "tags_all": {
              "name": "my_IGW"
            },
            "vpc_id": "vpc-04a8ad0179c32720b"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "terra_net_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492199513:network-interface/eni-0553ae36e5b62066d",
            "id": "eni-0553ae36e5b62066d",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "12:aa:eb:fb:38:97",
            "owner_id": "381492199513",
            "private_ip": "10.0.1.109",
            "private_ip_list": [
              "10.0.1.109"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.109"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c1cd9183f4e16f02"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bc93a3234b0d26e2"
          },
          "dependencies": [
            "aws_security_group.terra_SG",
            "aws_subnet.terra_subnet",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "terra_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0cf0f859f2185146c",
            "id": "r-rtb-0d9d221643164ca7c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d9d221643164ca7c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terra_IGW",
            "aws_route_table.terra_route_table",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terra_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492199513:route-table/rtb-0d9d221643164ca7c",
            "id": "rtb-0d9d221643164ca7c",
            "owner_id": "381492199513",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "name": "my_route_table"
            },
            "tags_all": {
              "name": "my_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a8ad0179c32720b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terra_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b5da1a3c3a95c42",
            "route_table_id": "rtb-0d9d221643164ca7c",
            "subnet_id": "subnet-0bc93a3234b0d26e2"
          },
          "dependencies": [
            "aws_route_table.terra_route_table",
            "aws_subnet.terra_subnet",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terra_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492199513:security-group/sg-0c1cd9183f4e16f02",
            "description": "security group for the EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound traffic rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c1cd9183f4e16f02",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0",
                  "10.0.0.0/16"
                ],
                "description": "http traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0",
                  "10.0.0.0/16"
                ],
                "description": "https traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0",
                  "10.0.0.0/16"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sec_group",
            "name_prefix": "",
            "owner_id": "381492199513",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "allow_web"
            },
            "tags_all": {
              "name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a8ad0179c32720b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492199513:subnet/subnet-0bc93a3234b0d26e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc93a3234b0d26e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381492199513",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "my_subnet"
            },
            "tags_all": {
              "name": "my_subnet"
            },
            "vpc_id": "vpc-04a8ad0179c32720b"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terra_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492199513:vpc/vpc-04a8ad0179c32720b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-090e758a6c84223d0",
            "default_route_table_id": "rtb-06a7774927ebcc82e",
            "default_security_group_id": "sg-04d11a2170e7a976f",
            "dhcp_options_id": "dopt-09d7a39828280530c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04a8ad0179c32720b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06a7774927ebcc82e",
            "owner_id": "381492199513",
            "tags": {
              "name": "my_vpc"
            },
            "tags_all": {
              "name": "my_vpc"
            }
          }
        }
      ]
    }
  ]
}